<resources>

    <string name="app_name">Bin Assistant</string>

    <string name="app_email" translatable="false">wyrzuctoapp@email.com</string>

    <string name="google_play_address" translatable="false">https://play.google.com/store/apps/details?id=development.dreamcatcher.howaboutit&amp;hl=pl</string>

    <string name="google_play_address_pro_version" translatable="false">https://play.google.com/store/apps/details?id=development.dreamcatcher.binassistantpro&amp;hl=pl</string>

    <string name="facebook_address" translatable="false">https://www.facebook.com/wyrzuctoapp</string>

    <string name="privacy_policy_address">https://docs.google.com/document/d/1B78TvABuGG5Z68sBFm6ff9eDcceemzXHqXHDce0WDCI/edit?usp=sharing</string>

    <string name="privacy_policy_link">Privacy Policy (link)</string>

    <string name="find_or_choose_the_kind">Find or choose the kind of waste from the list, to check
        how to recycle it properly.
    </string>

    <string name="connection_problem">Connection problem</string>

    <string name="please_check_your_internet_connection">Please check your Internet connection</string>

    <string name="thank_you_for_downloading_bin">Thank you for downloading Bin Assistant!</string>

    <string name="we_hope_that_our_work">We hope that our work helps promoting ecological life-style.</string>

    <string name="we_will_be_very_grateful">We will be very grateful if you would like to leave us a feedback.</string>

    <string name="if_you_can_see_anything">If you can see anything we could improve, please do not hesitate to contact us:</string>

    <string name="huge_special_thanks_to_everyone">
        Huge specials thanks to everyone who contributed into the app:\n\n

        App Icon made by Icongeek26 from www.flaticon.com:\n
        https://www.flaticon.com/authors/icongeek26\n\n

        Used font: \'Lato\' by Łukasz Dziedzic:\n
        https://fonts.google.com/specimen/Lato\n\n

        Circular Progress Bar drawable code by M. Reza Nasirloo:\n
        https://medium.com/@m.reza.nasirloo\n\n

        Cross Icon made by Lyolya from www.flaticon.com:\n
        https://www.flaticon.com/authors/lyolya\n\n

        Search Engine Icon made by Vectors Market from www.flaticon.com:\n
        https://www.flaticon.com/authors/vectors-market
    </string>

    <string name="language_issue" translatable="false">Language issue</string>

    <string name="we_are_sorry_but_currently" translatable="false">We are sorry, but currently the app content is available only in Polish language. English version is coming soon!</string>

    <string name="ok" translatable="false">OK</string>

    <string name="picture_unavailable">Picture unavailable</string>

    <string name="loading">Loading...</string>

    <string name="search">Search</string>

    <string name="show_more">Show more</string>

    <string name="unfortunately_we_cannot_find_anything">
        Unfortunately, we cannot find anything like this. :(\n\n
        Please click on the button below to let us know about the missing item.\n\n
        We\'ll try to update our database as quick as possible!
    </string>

    <string name="thank_you_well_try_to">
        Thank you!\n\n
        We\'ll try to add the missing item soon!
    </string>

    <string name="yes_please">Yes, please</string>

    <string name="footer">Bin Assistant ® 2020</string>

    <!--    It actually should be translated in perfect world-->
    <string name="app_lock_title" translatable="false">Droga użytkowniczko, drogi użytkowniku</string>

    <!--    It actually should be translated in perfect world-->
    <string name="app_lock_text" translatable="false">

        ‘Wyrzuć To’ jest projektem, który mamy zaszczyt Tworzyć dla Was oraz dla dobra naszego naturalnego środowiska.\n\n

        Niestety niesie to za sobą pewne koszty, których nie chcemy rekompensować poprzez umieszczanie w aplikacji reklam.\n\n

        Z tego powodu darmowa wersja aplikacji przestanie działać 10-go stycznia 2021, jednak zastąpi ją wersja ‘Wyrzuć To Pro’, która kosztować będzie trochę mniej niż kawa w Starbucksie, to znaczy 10 zł.\n\n

        Ta kwota pozwoli nam utrzymać oraz nadal rozwijać aplikację.\n\n

        Jeśli chcesz możesz pobrać ją już dziś, klikając w przycisk poniżej!\n\n

        Dziękujemy, jeśli doceniasz naszą pracę. Postaramy się wykonywać ją jeszcze lepiej!\n\n

        Pozdrawiamy,\n
        Zespół ‘Wyrzuć To’

    </string>

    <string name="download_pro_version">Download Pro Version</string>

    <string name="close">Close</string>

    <!-- Analytics events names -->

    <string name="analytics_event_feedback_stars_clicked" translatable="false">feedback_stars_clicked</string>

    <string name="analytics_event_items_database_error" translatable="false">items_database_error</string>

    <string name="analytics_event_protips_database_error" translatable="false">protips_database_error</string>

    <string name="analytics_event_fake_network_error" translatable="false">fake_network_error</string>

    <!-- Notifications channels -->

    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>

    <string name="default_notification_channel_name" translatable="false">default_notification_channel_name</string>

</resources>
