<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_info_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/elevation_second_floor">

    <RelativeLayout
            android:id="@+id/spacing_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorBackgroundAlternative"
            android:alpha="0.7"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_badge"
            app:layout_constraintTop_toBottomOf="@id/spacing_top"
            app:layout_constraintBottom_toTopOf="@id/spacing_bottom">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/thank_you_for_downloading_bin"/>

                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/logo"
                        android:layout_gravity="center_horizontal"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/we_hope_that_our_work"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/we_will_be_very_grateful"/>

                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/logo"
                        android:layout_gravity="center_horizontal"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/if_you_can_see_anything"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/app_email"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/footer"/>

            </LinearLayout>

        </ScrollView>

        <ImageButton
                android:id="@+id/btn_cross"
                android:layout_width="@dimen/detailed_view_cross_button_length"
                android:layout_height="@dimen/detailed_view_cross_button_length"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/detailed_view_cross_button_margin"
                android:src="@drawable/image_cross_non_commercial"
                android:scaleType="centerCrop"
                android:background="@null"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
            android:id="@+id/spacing_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            android:background="@color/colorBackgroundAlternative"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0.7"/>

</androidx.constraintlayout.widget.ConstraintLayout>