<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/app_info_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/elevation_second_floor">

    <RelativeLayout
            android:id="@+id/spacing_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorBackgroundAlternative"
            android:alpha="0.7"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_badge"
            app:layout_constraintTop_toBottomOf="@id/spacing_top"
            app:layout_constraintBottom_toTopOf="@id/spacing_bottom">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:layout_editor_absoluteY="-304dp"
                tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="90dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_lock_title"/>

                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/logo"
                        android:layout_gravity="center_horizontal"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="12sp"
                        android:text="@string/app_lock_text"/>

                <Button
                        android:id="@+id/btn_get_pro_version"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="13dp"
                        android:elevation="@dimen/elevation_first_floor"
                        android:text="@string/download_pro_version"
                        android:textColor="#FFF"
                        android:backgroundTint="#1E90FF"
                        android:scaleType="fitCenter"/>

                <Button
                        android:id="@+id/btn_close"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="20dp"
                        android:padding="13dp"
                        android:elevation="@dimen/elevation_first_floor"
                        android:text="@string/close"
                        android:textColor="#FFF"
                        android:backgroundTint="#1E90FF"
                        android:scaleType="fitCenter"/>

                <TextView
                        style="@style/footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/footer"/>

            </LinearLayout>

        </ScrollView>

        <ImageButton
                android:id="@+id/btn_cross"
                android:layout_width="@dimen/detailed_view_cross_button_length"
                android:layout_height="@dimen/detailed_view_cross_button_length"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/detailed_view_cross_button_margin"
                android:src="@drawable/icon_cross"
                android:scaleType="centerCrop"
                android:background="@null"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
            android:id="@+id/spacing_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            android:background="@color/colorBackgroundAlternative"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0.7"/>

</androidx.constraintlayout.widget.ConstraintLayout>